[package]
name = "killport"
version = "0.9.1"
authors = ["Francisco Jimenez Cabrera <jkfran@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A command-line tool to easily kill processes running on a specified port."
readme = "README.md"
homepage = "https://github.com/jkfran/killport"
repository = "https://github.com/jkfran/killport"
keywords = ["cli", "port", "process", "kill", "linux"]
categories = ["command-line-utilities"]

[dependencies]
log = "0.4.19"
env_logger = "0.10.0"
clap-verbosity-flag = "2.0.1"
clap = { version = "4.3.19", features = ["derive"] }
nix = "0.26.2"
bollard = "0.14.0"
tokio = "1.28.0"
anyhow = "1.0.71"

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
procfs = "0.15.1"

[target.'cfg(target_os = "macos")'.dependencies]
libproc = "0.13.0"
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.48"
features = [
  "Win32_Foundation",
  "Win32_NetworkManagement_IpHelper",
  "Win32_System_Threading",
  "Win32_Networking_WinSock",
  "Win32_System_Diagnostics_ToolHelp",
]

[dev-dependencies]
assert_cmd = "2.0.12"
tempfile = "3.7.0"
