[package]
name = "killport"
version = "1.1.0"
authors = ["Francisco Jimenez Cabrera <jkfran@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A command-line tool to easily kill processes and containers running on a specified port."
readme = "README.md"
homepage = "https://github.com/jkfran/killport"
repository = "https://github.com/jkfran/killport"
keywords = ["cli", "port", "process", "kill", "linux"]
categories = ["command-line-utilities"]

[dependencies]
log = "0.4.21"
env_logger = "0.11.3"
clap-verbosity-flag = "2.2.0"
clap = { version = "4.5.4", features = ["derive"] }
nix = { version = "0.28.0", features = ["signal"] }
bollard = "0.16.1"
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
procfs = "0.16.0"

[target.'cfg(target_os = "macos")'.dependencies]
libproc = "0.14.8"

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.52"
features = [
  "Win32_Foundation",
  "Win32_NetworkManagement_IpHelper",
  "Win32_System_Threading",
  "Win32_Networking_WinSock",
  "Win32_System_Diagnostics_ToolHelp",
]

[dev-dependencies]
assert_cmd = "2.0.14"
tempfile = "3.10.1"
mockall = "0.12.1"
regex = "1.10.4"
