[package]
name = "killport"
version = "1.1.0"
authors = ["Francisco Jimenez Cabrera <jkfran@gmail.com>"]
edition = "2021"
rust-version = "1.74"
license = "MIT"
description = "A command-line tool to easily kill processes and containers running on a specified port."
readme = "README.md"
homepage = "https://github.com/jkfran/killport"
repository = "https://github.com/jkfran/killport"
keywords = ["cli", "port", "process", "kill", "network"]
categories = ["command-line-utilities"]

[dependencies]
log = "0.4.29"
env_logger = "0.11.9"
clap-verbosity-flag = "3.0.4"
clap = { version = "4.5.60", features = ["derive"] }
nix = { version = "0.31.2", features = ["signal"] }
bollard = "0.20.1"
tokio = { version = "1.50.0", features = ["rt"] }

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
procfs = "0.18.0"

[target.'cfg(target_os = "macos")'.dependencies]
libproc = "0.14.11"

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.61"
features = [
  "Win32_Foundation",
  "Win32_NetworkManagement_IpHelper",
  "Win32_System_Threading",
  "Win32_Networking_WinSock",
  "Win32_System_Diagnostics_ToolHelp",
]

[build-dependencies]
clap = { version = "4.5.60", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
clap_complete = "4.5.66"
clap_mangen = "0.2.31"

[dev-dependencies]
assert_cmd = "2.1.2"
tempfile = "3.26.0"
regex = "1.12.3"
libc = "0.2"
